<resources>
    <string name="app_name">名校</string>
    <string name="yin_next">下一页</string>
    <string name="yin_action">点击进入</string>
    <array name="scheme_colors">
        <item>@color/orange</item>
        <item>@color/pink</item>
        <item>@color/green</item>
        <item>@color/blue</item>
    </array>
    <integer-array name="google_colors">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/yellow</item>
        <item>@color/green</item>
    </integer-array>
    <string name="footer_text">上拉加载</string>
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>
    <string name="popupwindow_title">请选择</string>
    <string name="popupwindow_search">搜索</string>
    <string name="search_school_layout_title_chazhao">查找学校</string>
    <string name="search_school_layout_content_id">学校编号/学校名称</string>
    <string name="search_school_layout_content_search">搜索</string>
    <string name="yindao_act_title">名校</string>
    <string name="yindao_act_content">让未来离你更近一步</string>
    <string name="yindao_act_version">V:1.0</string>
    <string name="title_bar_title">学校列表</string>
    <string name="recycler_item_onclick"><![CDATA[戳开查看详情-->]]></string>
    <string name="popupwindow_yun">学校云</string>
    <string name="select_layout_school">学校版</string>
    <string name="select_layout_studnet">学生版</string>
    <string name="confirm_school_info_title">确认加入名校</string>
    <string name="confirm_school_info_schoolid">请输入学校编号</string>
    <string name="confirm_school_info_name">请输入学校名称</string>
    <string name="confirm_school_info_jiaruma">请输入加入码</string>
    <string name="confirm_school_info_queren_btn">确认信息</string>
    <string name="confirm_school_info_gobye_btn">返回界面</string>
    <string name="confirm_school_info_queren_tv">《 确认信息之前请仔细阅读加入条款 》</string>
    <string name="school_activity_caidan_xiangqing">详情</string>
    <string name="school_activity_caidan_weihu">维护</string>
    <string name="school_activity_title">学校名称</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">这里是学校详情页</string>
</resources>
