<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:background="@drawable/welcome1"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_textSizePercent="7%"
        app:layout_marginTopPercent="10%w"
        android:gravity="center"
        android:text="@string/yindao_act_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_textSizePercent="3%"
        android:gravity="center"
        app:layout_marginTopPercent="5%w"
        android:text="@string/yindao_act_content"/>
    <TextView
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_textSizePercent="2%"
        app:layout_marginBottomPercent="5%w"
        android:gravity="center"
        android:text="@string/yindao_act_version"/>
</com.zhy.android.percent.support.PercentLinearLayout>